--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,7 +11,7 @@
     line-height: 1.7;
     letter-spacing: 1px;
     background-color: #fcfcfc;
-    @apply text-black-900;
+    color: #27272D;
   }
 
   #__nuxt { min-height: 100vh; }
