--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,11 +7,17 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Nunito+Sans:wght@400;600;700&display=swap');
 
   body {
-    font-family: Avenir, Noto Sans TC, Nunito Sans, sans-serif;
+    font-family: PingFangTC, Avenir, Noto Sans TC, Nunito Sans, sans-serif;
     line-height: 1.7;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
+    letter-spacing: 0.1em;
+    
     background-color: #fcfcfc;
     color: #27272D;
+  }
+
+  button {
+    letter-spacing: 0.1em;
   }
 
   #__nuxt { min-height: 100vh; }
