--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -22,3 +22,21 @@
 
   #__nuxt { min-height: 100vh; }
 }
+
+.main-btn-hover {
+  transition: .2s all ease-in-out;
+}
+.main-btn-hover:hover {
+  background-color: #21219c;
+  color: #fcfcfc;
+}
+
+.second-btn-hover {
+  transition: .2s all ease-in-out;
+}
+
+.second-btn-hover:hover {
+  background-color: #fcfcfc;
+  color: #21219c;
+  border: 2px solid #21219c;
+}
